tests/ui/cve_2018_20992/cve_2018_20992.stderr
error: Use `Vec::set_len` to extend the length of a `Vec`, potentially including uninitialized elements
  --> tests/ui/cve_2018_20992/cve_2018_20992.rs:5:8
   |
LL | pub fn ensure_buffer_len(mut buffer: Vec<i32>, new_len: usize) -> Vec<i32> {
   |                          ---------- `Vec` created here
LL |     if buffer.len() < new_len {
   |        ^^^^^^^^^^^^^^^^^^^^^^ `Vec::set_len` called here
   |
   = note: make sure all elements are initialized before using them
   = note: `#[deny(rpl::set_len_to_extend)]` on by default

error: aborting due to 1 previous error

